# learning-cycle-assessment

./: .env.example  .env.production  .env.smoke.example  .gitignore  Dockerfile  README.md  compose.https.yaml  compose.yaml  pyproject.toml  pytest.ini  团队成员年度学习计划模板_基于能力模型_V1.3.xlsx
apps/accounts/: models.py  services.py  urls.py  views.py
apps/accounts/migrations/: 0001_initial.py  0002_mentorship_and_groups.py  0003_emaillog.py
apps/dashboard/: selectors.py  urls.py  views.py
apps/learning/: admin.py  apps.py  forms.py  models.py  parser.py  services.py  services_execution.py  services_planning.py  services_sync.py  urls.py  views.py
apps/reports/: apps.py  excel.py  urls.py  views.py
config/: urls.py
config/settings/: base.py  local.py  production.py
design/: context.md  research.md
docker/: entrypoint.sh  nginx.conf  nginx.https.conf
docs/: ACCEPTANCE.md  ARCHITECTURE.md  DEPLOYMENT.md  USAGE.md
scripts/: backup.sh  deploy-https.sh  deploy-loop.sh  journey-loop.sh  restore.sh  smoke-loop.sh  smoke-setup.sh
static/css/: app.css
templates/: 403.html  404.html  base.html
templates/accounts/: home.html  user_admin.html
templates/dashboard/: buddy.html  history.html  leader.html  member.html
templates/learning/: assessment.html  buddy_approvals.html  cycle_admin.html  execution_detail.html  plan_detail.html
templates/registration/: login.html
tests/: test_accessibility_smoke.py  test_buddy_journey.py  test_leader_journey.py  test_member_journey.py  test_production_settings.py
tests/smoke/: test_smoke_journey.py  test_smoke_readonly.py
(+44 files in other folders)
