[project]
name = "team-learn-plan"
version = "0.1.0"
description = "Team annual learning plan web system"
requires-python = "~=3.13.0"
dependencies = [
    "django>=5.2,<5.3",
    "psycopg[binary]>=3.2",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-django>=4.9",
]

[tool.uv]
package = false
python-preference = "only-managed"
